[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bangwu", email = "i@bangwu.top" }
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-github-admonitions-plugin>=0.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge"]
